--- a/games/resources/2019-04-08/tsconfig.json
+++ b/games/resources/2019-04-08/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "strictNullChecks": true,
     "target": "es6",
+    "strict": true,
     "sourceMap": true
   },
   "compileOnSave": true
